fix(styles): The selected option was visually cut off - fixed

--- a/src/css/modules/selected.css
+++ b/src/css/modules/selected.css
@@ -34,6 +34,7 @@
 .vs--single .vs__selected {
     background-color: transparent;
     border-color: transparent;
+    flex: none;
 }
 
 .vs--single.vs--open .vs__selected,
